40/BE1 - rework for adding post-send hook to simreal
Moved the statm measuring stuff into lintel & test it.

StatM.hpp & StatM.cpp : new code to read from /proc/pid/statm

stat_m.cpp : testcase.  Checks that we get expected behavior, mostly out of the size and resident
fields.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ SET(LIBLINTEL_SOURCES
 	Matrix.cpp
 	MersenneTwisterRandom.cpp
 	PriorityQueue.cpp
+	StatM.cpp
 	Stats.cpp
 	StatsEMA.cpp
 	StatsHistogram.cpp
