--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -34,6 +34,7 @@ SET(INCLUDE_FILES
 	PriorityQueue.hpp
 	RotatingHashMap.hpp
 	SimpleMutex.hpp
+	StatM.hpp
 	Stats.hpp
 	StatsCube.hpp
 	StatsEMA.hpp
