--- a/src/deptool.in
+++ b/src/deptool.in
@@ -4088,11 +4088,14 @@ sub readMtnOptions {
 }
 
 sub getCmdOutput {
-    my($cmd) = @_;
+    my($cmd, $pre_close_fn) = @_;
 
-    my $fh = new FileHandle "$cmd 2>/dev/null |"
+    # TODO: use open3 or processmanager to capture stdout/stderr separately 2>&1 is potentially
+    # unsafe.
+    my $fh = new FileHandle "$cmd 2>&1 |"
         or die "Unable to run $cmd: $!";
     my @ret = <$fh>;
+    &$pre_close_fn(\@ret) if defined $pre_close_fn;
     close($fh) or confess "close failed: $!\ncommand is $cmd";
     die "$cmd failed" unless $? == 0;
     return @ret;
@@ -4173,12 +4176,20 @@ sub vcLogRevision {
     my $vcver = vcVersionString();
     if ($vcver =~ /^monotone-(\d+)\.(\d+)\b/o) {
 	my ($major, $minor) = ($1,$2);
+        my $check_fn = sub {
+            my ($lines) = @_;
+
+            if (grep(/no match for selection/o, @{$lines}) > 0) {
+                die "Revision '$revision' not found. Did you specify the correct revision?";
+            }
+        };
 	if ($major == 0 && $minor <= 0.28) { # may be later than this
-	    return getCmdOutput("mtn log -r $revision --last 1");
+	    return getCmdOutput("mtn log -r $revision --last 1", $check_fn);
 	} elsif ($major == 0 && $minor < 45) { # date formatting added in 0.45
-	    return getCmdOutput("mtn log --from $revision --last 1 --no-graph");
+	    return getCmdOutput("mtn log --from $revision --last 1 --no-graph", $check_fn);
 	} else {
-	    return getCmdOutput("mtn log --no-format-dates --from $revision --last 1 --no-graph");
+	    return getCmdOutput("mtn log --no-format-dates --from $revision --last 1 --no-graph",
+                               $check_fn);
 	}
     } else {
 	die "Don't know how to get revision log on $vcver";
