PThread.hpp.in: Add TODO around PThreadCond and lock ordering.

--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -266,6 +266,8 @@ public:
 };
 #endif
 
+// TODO: figure out how to make condition variables interact properly with lock ordering.
+
 class PThreadCond : boost::noncopyable {
 public:
     PThreadCond() {
